# mpx

./: .gitignore  Cargo.toml
src/: README.md  main.rs
src/assets/: material.rs  mesh.rs  mod.rs
src/layers/: mod.rs
src/math/: frustum.rs  mod.rs  transform.rs
src/renderer/: context.rs  gpu_mesh.rs  ibl.rs  mod.rs  pipeline.rs  post.rs  procedural_textures.rs  shadow.rs  skybox.rs  ssao.rs  ssr.rs  taa.rs  texture.rs  uniforms.rs
src/scene/: camera.rs  light.rs  mod.rs  object.rs
src/shaders/: gbuffer.wgsl  ibl_bake.wgsl  pbr.wgsl  post.wgsl  shadow.wgsl  skybox.wgsl  ssao.wgsl  ssr.wgsl  taa.wgsl
src/ui/: egui_renderer.rs  mod.rs
src/utils/: mod.rs
