[package]
name = "pbr-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pbr-engine"
path = "src/main.rs"

[dependencies]
wgpu = "28.0.0"
winit = "0.30.13"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
anyhow = "1.0"
thiserror = "2.0"
slotmap = "1.0"
wgsl-inline = { version = "0.2", optional = true }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
